--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:locale" content="en_US" />
 <link rel="canonical" href="https://sandeep1294.github.io/DataVizFinalProject/" />
 <meta property="og:url" content="https://sandeep1294.github.io/DataVizFinalProject/" />
-<meta property="og:site_name" content="DataVizFinalProject" />
+<meta property="og:site_name" content="Visualizing LIRR Delays" />
 <script type="application/ld+json">
 {"name":"DataVizFinalProject","@type":"WebSite","url":"https://sandeep1294.github.io/DataVizFinalProject/","headline":"Welcome to GitHub Pages","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
