--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">DataVizFinalProject</h1>
+      <h1 class="project-name">Visualizing LIRR Delays</h1>
       <h2 class="project-tagline"></h2>
       
         <a href="https://github.com/sandeep1294/DataVizFinalProject" class="btn">View on GitHub</a>
