--- a/index.html
+++ b/index.html
@@ -685,15 +685,18 @@
       .enter().append("circle")
       .attr("class","datacircles")
       .on("mouseover", function(d) { 
-        this.parentElement.appendChild(this); 
+        this.style.fill="#64a19d";
+        // this.parentElement.appendChild(this); 
         tooltipDiv.transition()    
         .duration(200)    
-        .style("opacity", 1);    
+        .style("opacity", 1)
+
         tooltipDiv.html(hoursMap[d.key] + "<br/>"  + d.value + " Delays")  
         .style("left", (d3.event.pageX) + "px")   
         .style("top", (d3.event.pageY - 52) + "px");  
       })          
-      .on("mouseout", function(d) {   
+      .on("mouseout", function(d) {
+        this.style.fill="";   
         tooltipDiv.transition()    
         .duration(500)    
         .style("opacity", 0); 
@@ -1102,6 +1105,7 @@ function updateOverviewViz(data)
   .attr("cy", function(d) {
     return yAxis(d.NR)+22;
   }).on("mouseover", function(d) {    
+    this.style.fill="#64a19d";
     tooltipDiv.transition()    
     .duration(200)    
     .style("opacity", 1);    
@@ -1110,12 +1114,10 @@ function updateOverviewViz(data)
     .style("top", (d3.event.pageY - 52) + "px");  
   })          
   .on("mouseout", function(d) {   
+    this.style.fill="";
     tooltipDiv.transition()    
     .duration(500)    
     .style("opacity", 0); 
-  })
-  .on("click", function(d) {
-    displayAnnotations(d.QD);
   });
 
   // viz.select(".xaxis").selectAll(".tick")
